updated sample data

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 /task_materials
 /task1 - NR
 /task2 - TSR
-/tmp.ipynb
+/tmp*
+/scouting*
 /extracted_data_NR
 /extracted_data_TSR
 /exception_log.txt
